# demo-gauntlet

./: .dockerignore  .env.example  .gitignore  AUDIT_2026-01-11.md  AUDIT_demoGauntlet.md  CLAUDE.md  DECISIONS.md  Dockerfile  HANDOFF-2026-02-25-1905.md  MIGRATION-NOTES.md  Makefile  README.md  SUMMARY.md  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  demogauntlet-fix-report.md  design.md  docker-compose.yml  mypy_output.txt  mypy_output_2.txt  mypy_output_3.txt  mypy_output_4.txt  mypy_output_final.txt  plan.md  pyproject.toml  requirements.txt  rules.md
.claude/: settings.local.json
.claude/agents/: verify.md
.claude/commands/: commit-push-pr.md
.github/workflows/: ci.yml
audit/: cross_cutting_risks.json  executive_summary.json  per_file_findings.json
backend/: Dockerfile  __init__.py  config.py  database.py  logger.py  main.py  worker.py
backend/api/: deps.py
backend/challenges/: __init__.py  agent.py  avatars.py  claim_extractor.py  difficulty.py  evidence_analyzer.py  evidence_selector.py  generator.py  implementations.py  personas.py  pipeline.py  question_synthesizer.py  router.py  store.py
backend/dspy_optimization/: README.md  benchmark_report_large.md  data_generator.py  debug_scores.py  dspy_comparison_analysis.md  gather_data.py  gauntlet_agent.py  inspect_agent.py  metrics.py  optimize.py  optimized_gauntlet_agent.json  run_comparison.py  run_large_benchmark.py  standard_agent.py  synthetic_challenges.json  training_challenges.json
backend/evaluation/: __init__.py  engine.py  reporting.py  router.py
backend/ingestion/: __init__.py  chunker.py  parser.py  processor.py  router.py  tagger.py
backend/migrations/: env.py
backend/models/: __init__.py  core.py  db_models.py  embeddings.py  fact_store.py  llm.py  session.py  store.py
backend/orchestrator/: loop.py  session.py
backend/probes/: __init__.py  config.py  harness.py  models.py  router.py  runner.py  (+1 more)
deployment/: backend-service-final.yaml  backend-service-v2.yaml  backend-service.yaml  frontend-service.yaml
dev/: run_api.sh
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: add_test_docstrings.py  check_python_docs.py  debug_chunks.py  generate_pdf.py  prepare_deployment.py  run_probes.py
(+110 files in other folders)
